# P-pop

./: LICENSE  README.rst  pyproject.toml  requirements.txt
P-pop/: P-pop.py  ReadPlanetPopulation.py  Star.py  System.py  SystemGenerator.py  TestPlanetPopulation.py
P-pop/AlbedoModels/: Constant.py  EarthAlbedo.py  Uniform.py
P-pop/EccentricityModels/: Circular.py
P-pop/ExozodiModels/: Ertel2018.py  Ertel2020.py  ExozodiNominal.npy  ExozodiOptimistic.npy  ExozodiPessimistic.npy  Median.py
P-pop/MassModels/: Chen2017.py  EarthMass.py
P-pop/MassModels/Forecaster/: func.py  mr_forecast.py  mr_forecast_bijective.py
P-pop/OrbitModels/: Quadrature.py  Random.py
P-pop/PlanetDistributions/: Bergsten2022.py  Bryson2021Model1Hab2High.py  Bryson2021Model1Hab2Low.py  Burke2015.py  Dressing2015.py  EarthTwin.py  Fernandes2019Symm.py  Fressin2013.py  HabitableNominal.py  HabitablePessimistic.py  SAG13.py  SAG13_extrap.py  SAG13_rv.py  Weiss2018.py  Weiss2018KDE.py
P-pop/ScalingModels/: BinarySuppression.py
P-pop/StabilityModels/: He2019.py  IncompatibleWeiss2018.py
P-pop/StarCatalogs/: CrossfieldBrightSample.py  CrossfieldBrightSample.tbl  ExoCat1.csv  ExoCat1.py  HPIC.py  HPIC_LTC4_combined.py  HPIC_LTC4_combined.txt  LTC2.csv  LTC2.py  LTC3.csv  LTC3.py  LTC3_old1.csv  LTC3_old2.csv  LTC4.csv  LTC4.py  LTC4_old.csv  LTC4_old.py  alphaCenA.py
